[package]
name = "scorebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.9.0"
tokio = {version = "1.19.2", features = ["rt", "rt-multi-thread"]}
tokio-postgres = "0.7.6"
poise = "0.3.0"